public_html/static/css/style.css
/* ... */
#sHeader .hadith:hover{
	color: #bbb;
}
.rtl #sHeader .hadith{
	/*text-align: left;*/
}
.typed-cursor{opacity: 1;font-weight: 100;animation: blink 0.7s infinite;}
@keyframes blink{ 0% { opacity:1; } 50% { opacity:0.3; } 100% { opacity:1; } }
/*header nav*/
#sHeaderNav .headerLine{
	background-color: #f5f5f5;
	background-color: rgba(245,245,245, 0.9);
	padding:20px 3% 16px;
	position: relative;
	overflow: hidden;
}
#sHeaderNav .headerLine:before{
	content: "";
	height:43px;
	width: 100%;
	display: block;
	background-color: #f5f5f5;
	background-color: rgba(245,245,245, 0.9);
	border-bottom: 2px solid #00aaaa;
	top: 0;
	right: 0;
	left: 0;
	position: absolute;
}
/* add fixed header nav styles*/
body.down #sHeaderNav.clone {
	transform: translateY(0);
}
#sHeaderNav.clone {
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
	z-index: 2;
	transform: translateY(-100%);
	transition: 0.3s transform cubic-bezier(.3,.73,.3,.74);
}
#sHeaderNav.clone .headerLine{
	padding-top: 13px;
	padding-bottom: 13px;
	background-color: transparent;
}
#sHeaderNav.clone .headerLine:before{
	height: 36px;
}
.mainNavMobile span{
	font-size: 2em;
	color: #020456;
}

#sidebar{display: block;position: fixed;top: 0;bottom: 0;overflow-y: auto;z-index: 3;background-color: rgba(0,0,0,0.9);width:250px;left: 0;left: -250px;transition:0.3s;}
body.rtl[data-sidebar] #sidebar{left:0;}
#sidebar ul{font-size:1.4em;margin-top:50px;color:#eee;}
#sidebar ul > li.title{background-color:#333;padding:0.5em 1em;}
#sidebar ul > li > a{display:block;padding:1.2em 2em;color:#eee;transition:0.3s;cursor:pointer;max-width:300px;margin:0 auto;}
#sidebar ul > li > a > span{font-size:2em;display:inline-block;width:1.5em;vertical-align:middle;}
#sidebar ul > li > a:hover{background-color:rgba(255,255,255,0.1)}
#sidebar ul > li > a:focus{background-color:rgba(255,255,255,0.3);color:#fff;}
#sidebar ul > li > a.donate{background-color:#aa6523;font-weight:bold}


.goldenB{
	padding:1px;
	border: 1px solid #aa6622;
	border-radius:3px;
}

/* slavat*/
.salavat{
	text-align: center;
	font-size: 1.5em;
	position: relative;
	margin-bottom: 25px;
	user-select: none;
	background-color: #fff;
}
.salavat .sB1{
	/*background-color: #fff;*/
}
.salavat img{
	display: block;
	padding: 0;
	margin: 0 auto;
	width: 100%;
	max-width: 400px;
}
.salavat .counter{
	color: #020558;
	font-size: 2em;
	font-weight: bold;
	padding:10px 0 5px;

}
.salavat .Allah{
	position: absolute;
	bottom: -22px;
	right: 0;
	left: 0;
}
.salavat .Allah a{
	display: block;
}

/* sprite*/
[class^="sprite-"] {
	background-image: url('../images/homepage-v3/sprite.png');
	background-repeat: no-repeat;
	background-position: 1000px 1000px;
}
.sprite-servants{
	width: 140px;
	height: 140px;
	background-position: -420px 0;
	margin: 0 auto;
	transition: 0.3s;
}
.sprite-servants:hover{
	background-position: -420px -140px;
}
.sprite-virtual{
	width: 140px;
	height: 140px;
	background-position: -560px 0;
	margin: 0 auto;
	transition: 0.3s;
}
.sprite-virtual:hover{
	background-position: -560px -140px;
}
.sprite-travel{
	width: 140px;
	height: 140px;
	background-position: -700px 0;
	margin: 0 auto;
	transition: 0.3s;
}
.sprite-travel:hover{
	background-position: -700px -140px;
}
.sprite-deputy{
	width: 140px;
	height: 140px;
	background-position: -280px 0;
	margin: 0 auto;
	transition: 0.3s;
}
.sprite-deputy:hover{
	background-position: -280px -140px;
}
.sprite-lottory{
	width: 140px;
	height: 140px;
	background-position: 0 0;
	margin: 0 auto;
	transition: 0.3s;
}
.sprite-lottory:hover{
	background-position: 0 -140px;
}

.sprite-farahzad{
	width: 140px;
	height: 140px;
	background-position: -840px 0;
	margin: 0 auto;
}
.sprite-farahzad:hover{
	background-position: -840px -140px;
}
.sprite-sahargahan{
	width: 140px;
	height: 140px;
	background-position: -980px 0;
	margin: 0 auto;
	transition: 0.3s;
}
.sprite-sahargahan:hover{
	background-position: -980px -140px;
}
.sprite-samtekhoda{
	width: 140px;
	height: 140px;
	background-position: -1120px 0;
	margin: 0 auto;
	transition: 0.3s;
}
.sprite-samtekhoda:hover{
	background-position: -1120px -140px;
}
.sprite-imani{
	width: 140px;
	height: 210px;
	background-position: -800px -300px;
	margin: 0 auto;
}
.sprite-imani:hover{
	background-position: -650px -300px;
}
.sprite-adminContact{
	width: 140px;
	height: 140px;
	background-position: -140px 0;
	margin: 0 auto;
}
.sprite-adminContact:hover{
	background-position: -140px -140px;
}
/* social links*/
.sprite-sapp{
	background-position: 0 -300px;
	width: 32px;
	height: 32px;
	margin: 0 auto;
}
.sprite-eitaa{
	background-position: -32px -300px;
	width: 32px;
	height: 32px;
	margin: 0 auto;
}
.sprite-aparat{
	background-position: -96px -300px;
	width: 32px;
	height: 32px;
	margin: 0 auto;
}
.sprite-telegram{
	background-position: -160px -300px;
	width: 32px;
	height: 32px;
	margin: 0 auto;
}
.sprite-whatsapp{
	background-position: -192px -300px;
	width: 32px;
	height: 32px;
	margin: 0 auto;
}
.sprite-instagram{
	background-position: -288px -300px;
	width: 32px;
	height: 32px;
	margin: 0 auto;
}
.sprite-twitter{
	background-position: -320px -140px;
	width: 32px;
	height: 32px;
	margin: 0 auto;
}
.sprite-facebook{
	background-position: -352px -140px;
	width: 32px;
	height: 32px;
	margin: 0 auto;
}
.sprite-youtube{
	background-position: -384px -140px;
	width: 32px;
	height: 32px;
	margin: 0 auto;
}

/* picto styles*/
.picto{
	margin-top: 1em;
	text-align: center;
}
.picto a{
	display: block;
	margin-bottom: 2em;
}
.picto h2{
	margin-top: 1em;
}

.billingInfo{
	font-size: 1.5em;
	margin-top: 5em;
	text-align: center;
}
.billingInfo h2{
}
.t733{
	letter-spacing: 3px;
}
.billingInfo .msg{
	min-height: 125px;
	height: 125px;
	padding:14px 1.5em;
}
.billingInfo .msg.bank{
	font-size: 0.9em;
	line-height: 30px;
}
.billingInfo .msg.bank .spay-64-resalat{
	margin: 0 auto;
}
.billingInfo .msg.donateLink .btn{
	height:95px;
	line-height:83px;
}
.latestNews{
	margin-top: 7em;
}
/* ... */

